# fbpyutils-db

./: .gitignore  ARCHITECTURE.md  CRUSH.md  DOC.md  DOCSTRINGS_TODO.md  Makefile  PLAN_RELEASE_V0.2.0_REFACTORING.md  PLAN_RELEASE_V0.3.0.md  README.md  SPEC.md  TODO.md  pyproject.toml
fbpyutils_db/: __init__.py  app.json
fbpyutils_db/data/: __init__.py  extract.py  isolate.py  normalize.py
fbpyutils_db/database/: __init__.py  index.py  operations.py  table.py  types.py
fbpyutils_db/database/dialects/: __init__.py  base.py  firebird.py  oracle.py  postgresql.py  sqlite.py
fbpyutils_db/hashing/: hash_column.py  hash_index.py
fbpyutils_db/utils/: nan_handler.py  validators.py
fbpyutils_db/visualization/: ascii_table.py  display.py
logs/: app.log.1
memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
plans/: DOCSTRINGS_TODO.md
tests/: test_get_data_from_pandas.py  test_isolate.py  test_normalize_columns.py
tests/functional/: test_database_operations.py
tests/unit/: test_add_hash_column.py  test_add_hash_index.py  test_ascii_table.py  test_create_index.py  test_create_table.py  test_get_column_type.py  test_get_columns_types.py  test_get_data_from_pandas.py  test_isolate.py  test_normalize_columns.py  test_operations.py  test_print_ascii_table_from_dataframe.py  test_print_columns.py
