[project]
name = "fbpyutils-db"
version = "0.1.1"
description = "Francisco Bispo's utilities for DB"
readme = "README.md"
authors = [
    { name = "Francisco C J Bispo", email = "fcjbispo@gmail.com" }
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fbpyutils", 
    "pandas",
    "numpy",
    "sqlalchemy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[tool.uv.sources]
fbpyutils = { url = "https://github.com/fcjbispo/builds/raw/refs/heads/main/fbpyutils/fbpyutils-1.6.7-py3-none-any.whl" }
